# DateSpot

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: app.py
src/datespot/: crew.py
src/datespot/config/: agents.yaml  tasks.yaml
src/datespot/schema/: schema.py
src/datespot/tools/: custom_tool.py
src/datespot_v2/: crew.py  main.py
src/datespot_v2/config/: tasks.yaml
src/datespot_v2/schema/: schema.py
tests/: output_analysis.ipynb
