[project]
name = "datespot"
version = "0.1.0"
description = "DateSpot using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0",
    "onnxruntime==1.15.0",
    "socksio>=1.0.0",
    "pyarrow==17.0.0",
    "geopy",
    "streamlit>=1.32.0",
    "folium>=0.15.0",
    "pandas>=2.0.0",
    "pillow>=10.0.0"
]

[project.scripts]
datespot = "datespot.main:run"
run_crew = "datespot.main:run"
train = "datespot.main:train"
replay = "datespot.main:replay"
test = "datespot.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
